@@ -10,6 +10,15 @@
 #include "qwt_math.h"
 #include "qwt_spline.h"
 #include "qwt_curve_fitter.h"
+#include <math.h>
+#if QT_VERSION < 0x040000
+#include <qvaluestack.h>
+#include <qvaluevector.h>
+#else
+#include <qstack.h>
+#include <qvector.h>
+#endif
+
 
 //! Constructor
 QwtCurveFitter::QwtCurveFitter()
@@ -237,4 +246,176 @@ QPolygonF QwtSplineCurveFitter::fitParametric(
     }
 
     return fittedPoints;
+}
+
+class QwtWeedingCurveFitter::PrivateData
+{
+public:
+    PrivateData():
+        tolerance(1.0)
+    {
+    }
+
+    double tolerance;
+};
+
+class QwtWeedingCurveFitter::Line
+{
+public:
+    Line(int i1 = 0, int i2 = 0):
+        from(i1),
+        to(i2)
+    {
+    }
+
+    int from;
+    int to;
+};
+
+//! Constructor
+QwtWeedingCurveFitter::QwtWeedingCurveFitter()
+{
+    d_data = new PrivateData;
+}
+
+//! Destructor
+QwtWeedingCurveFitter::~QwtWeedingCurveFitter()
+{
+    delete d_data;
+}
+
+/*!
+ Assign the tolerance
+
+ The tolerance is the maximum distance, that is accaptable
+ between the original curve and the smoothed curve.
+
+ Increasing the tolerance will reduce the number of the
+ resulting points.
+
+ \param tolerance Tolerance
+
+ \sa tolerance()
+*/
+void QwtWeedingCurveFitter::setTolerance(double tolerance)
+{
+    d_data->tolerance = qwtMax(tolerance, 0.0);
+}
+
+/*!
+  \return Tolerance
+  \sa setTolerance()
+*/
+double QwtWeedingCurveFitter::tolerance() const
+{
+    return d_data->tolerance;
+}
+
+/*!
+  \param points Series of data points
+  \return Curve points
+*/
+#if QT_VERSION < 0x040000
+QwtArray<QwtDoublePoint> QwtWeedingCurveFitter::fitCurve(
+    const QwtArray<QwtDoublePoint> &points) const
+#else
+QPolygonF QwtWeedingCurveFitter::fitCurve(const QPolygonF &points) const
+#endif
+{
+#if QT_VERSION < 0x040000
+    QValueStack<Line> stack;
+#else
+    QStack<Line> stack;
+    stack.reserve(500);
+#endif
+
+    const QwtDoublePoint *p = points.data();
+    const int nPoints = points.size();
+
+#if QT_VERSION < 0x040000
+    QValueVector<bool> usePoint(nPoints, false);
+#else
+    QVector<bool> usePoint(nPoints, false);
+#endif
+
+    double distToSegment;
+
+    stack.push(Line(0, nPoints - 1));
+
+    while ( !stack.isEmpty() )
+    {
+        const Line r = stack.pop();
+
+        // initialize line segment
+        const double vecX = p[r.to].x() - p[r.from].x();
+        const double vecY = p[r.to].y() - p[r.from].y();
+
+        const double vecLength = ::sqrt( vecX * vecX + vecY * vecY );
+
+        const double unitVecX = (vecLength != 0.0) ? vecX / vecLength : 0.0;
+        const double unitVecY = (vecLength != 0.0) ? vecY / vecLength : 0.0;
+
+        double maxDist = 0.0;
+        int nVertexIndexMaxDistance = r.from + 1;
+        for ( int i = r.from + 1; i < r.to; i++ )
+        {
+            //compare to anchor
+            const double fromVecX = p[i].x() - p[r.from].x();
+            const double fromVecY = p[i].y() - p[r.from].y();
+            const double fromVecLength =
+                ::sqrt(fromVecX * fromVecX + fromVecY * fromVecY );
+
+            if ( fromVecX * unitVecX + fromVecY * unitVecY < 0.0 )
+            {
+                distToSegment = fromVecLength;
+            }
+            if ( fromVecX * unitVecX + fromVecY * unitVecY < 0.0 )
+            {
+                distToSegment = fromVecLength;
+            }
+            else
+            {
+                const double toVecX = p[i].x() - p[r.to].x();
+                const double toVecY = p[i].y() - p[r.to].y();
+                const double toVecLength = ::sqrt( toVecX * toVecX + toVecY * toVecY );
+                const double s = toVecX * (-unitVecX) + toVecY * (-unitVecY);
+                if ( s < 0.0 )
+                    distToSegment = toVecLength;
+                else
+                {
+                    distToSegment = ::sqrt( fabs( toVecLength * toVecLength - s * s ) );
+                }
+            }
+
+            if ( maxDist < distToSegment )
+            {
+                maxDist = distToSegment;
+                nVertexIndexMaxDistance = i;
+            }
+        }
+        if ( maxDist <= d_data->tolerance )
+        {
+            usePoint[r.from] = true;
+            usePoint[r.to] = true;
+        }
+        else
+        {
+            stack.push(Line(r.from, nVertexIndexMaxDistance) );
+            stack.push(Line(nVertexIndexMaxDistance, r.to) );
+        }
+    }
+
+    int cnt = 0;
+#if QT_VERSION < 0x040000
+    QwtArray<QwtDoublePoint> stripped(nPoints);
+#else
+    QPolygonF stripped(nPoints);
+#endif
+    for ( int i = 0; i < nPoints; i++ )
+    {
+        if ( usePoint[i] )
+            stripped[cnt++] = p[i];
+    }
+    stripped.resize(cnt);
+    return stripped;
 }
